--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>No Idea</title>
+    <link rel="shortcut icon" href="#" type="image/x-icon" />
+    <link rel="stylesheet" href="./style/style.css" />
+    <script src="JS/main.js" defer></script>
+    <title>No Idea? A look into the insanity of the free(-ish) anonymous internet?</title>
   </head>
-  <body></body>
+  <body>
+    <button id="nav-btn">NAV SUCKS</button>
+    <main id="container"></main>
+  </body>
 </html>
