--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>No Idea? A look into the insanity of the free(-ish) anonymous internet?</title>
   </head>
   <body>
-    <button id="nav-btn">NAV SUCKS</button>
+    <button id="nav-btn">SHIBE</button>
     <main id="container"></main>
   </body>
 </html>
