added a few things, made a few changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <title>No Idea? A look into the insanity of the free(-ish) anonymous internet?</title>
   </head>
   <body>
-    <button id="nav-btn">SHIBE</button>
-    <main id="container"></main>
+    <div id="nav-bar">
+    <button id="home-btn">Home</button>
+    <button id="dog-btn">Dogs</button>
+    <button id="cat-btn">Cats</button>
+  </div>
+  <main>
+    <div id="container"></div>
+    <button id="render-btn">RENDER</button>
+  </main>
   </body>
 </html>
