finally found working API, started designing site

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="shortcut icon" href="#" type="image/x-icon" />
     <link rel="stylesheet" href="./style/style.css" />
     <script src="JS/main.js" defer></script>
-    <title>No Idea? A look into the insanity of the free(-ish) anonymous internet?</title>
+    <title>Random Animals and Facts I guess</title>
   </head>
   <body>
     <div id="nav-bar">
-    <button id="home-btn">Home</button>
-    <button id="dog-btn">Dogs</button>
-    <button id="cat-btn">Cats</button>
-  </div>
-  <main>
-    <div id="container"></div>
-    <button id="render-btn">RENDER</button>
-  </main>
+      <button id="home-btn">Home</button>
+      <button id="dog-btn">Dogs</button>
+      <button id="cat-btn">Cats</button>
+    </div>
+    <main>
+      <div id="container"></div>
+      <button id="render-btn">RENDER</button>
+    </main>
   </body>
 </html>
