cleanup, commented JS and some style tweaking

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="#" type="image/x-icon" />
     <link rel="stylesheet" href="./style/style.css" />
     <script src="JS/main.js" defer></script>
-    <title>Random Animals and Facts I guess</title>
+    <title>Random Animals and Facts, I guess</title>
   </head>
   <body>
     <div id="nav-bar">
