--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </div>
     <main>
       <div id="container"></div>
-      <button id="render-btn">RENDER</button>
+      <button id="render-btn">Show me an animal and a fact about it!</button>
+      <pre>The creator of this site is not responsible for the validity of any "facts"</pre>
     </main>
   </body>
 </html>
