--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <main>
       <div id="container"></div>
       <button id="render-btn">Show me an animal and a fact about it!</button>
-      <pre>The creator of this site is not responsible for the validity of any "facts"</pre>
+      <p id="error-el"></p>
     </main>
+    <pre>The creator of this site is not responsible for the validity of any "facts"</pre>
   </body>
 </html>
