--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <div id="container"></div>
       <button id="render-btn">Show me an animal and a fact about it!</button>
-      <p id="error-el"></p>
+      <p id="info-el">Please choose an Animal</p>
     </main>
     <pre>The creator of this site is not responsible for the validity of any "facts"</pre>
   </body>
